--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,9 +4,9 @@
 
 <h1>Products</h1>
 
-<div id="products">
-  <% @products.each do |product| %>
-    <%= render product %>    
-  <% end %>
-</div>
 
+<%= turbo_frame_tag "products" do %>
+  <%= render partial: "product", collection: @products %>
+<% end %>
+
+<%= render 'pagination' %>
